// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipGroup /> selectionType="multiple" should render with selectionType="multiple" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="chip-group-104-label"
      accessible={true}
      data-blade-component="chip-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.normal.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
        </View>
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Apple
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Mango
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Orange
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChipGroup /> selectionType="single" should render with selectionType="single" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="chip-group-7-label"
      accessibilityRole="radiogroup"
      accessible={true}
      data-blade-component="chip-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.normal.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
        </View>
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-1-helptext-2"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Apple
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-3-helptext-4"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Mango
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-5-helptext-6"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      borderColor="brand.gray.400.lowContrast"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="transparent"
                        borderColor="brand.gray.400.lowContrast"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="default"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {},
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.subtle.lowContrast"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(216, 27%, 36%, 1)",
                                "fontFamily": "Lato",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Orange
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
